--- a/function.yaml
+++ b/function.yaml
@@ -10,7 +10,7 @@ spec:
         autoscaling.knative.dev/min-scale: "1"
     spec:
       containers:
-        - image: projects.registry.vmware.com/tanzu_ese_poc/rguske/kn-py-cloudevent-transformation-function:1.0
+        - image: rguske/kn-py-cloudevent-transformation-function:1.0
           env:
             - name: ADDRESS
               value: "0.0.0.0"
